# TinyWeb

./: ANALYSIS_REPORT.md  CMakeLists.txt  README.md  README.txt  index.html  main  main.c  sbuf.c  sio  sio.c  sio.h
cgi-bin/: hello  hello.c
csapp.dSYM/Contents/: Info.plist
csapp.dSYM/Contents/Resources/DWARF/: csapp
csapp.dSYM/Contents/Resources/Relocations/aarch64/: csapp.yml
index.dSYM/Contents/Resources/DWARF/: index
index.dSYM/Contents/Resources/Relocations/aarch64/: index.yml
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
sbuf.dSYM/Contents/: Info.plist
sbuf.dSYM/Contents/Resources/DWARF/: sbuf
sbuf.dSYM/Contents/Resources/Relocations/aarch64/: sbuf.yml
sio.dSYM/Contents/: Info.plist
sio.dSYM/Contents/Resources/DWARF/: sio
sio.dSYM/Contents/Resources/Relocations/aarch64/: sio.yml
src/: admin.c  admin.h  csapp.c  csapp.h  main.c  proxy.c  proxy_config.h  sbuf.h
www/: app.js  cgi-demo.html  features.html  index.html  static-demo.html  styles.css
www/cgi-bin/: calc.c  echo.c  form-handler.c  hello  info.c
